# little-environment

./: .gitlab-ci.yml  Cargo.toml  README.md
.github/workflows/: main.yml
lib/: Cargo.toml
lib/src/notifier/: mod.rs
lib/src/token/tokens/: not.rs  stringz.rs
public/: index.html  load.js  styles.css  tln.css  tln.js
src/: lib.rs
src/components/: editor.rs  mod.rs  navigation.rs
static/: .gitignore  package.json  styles.css
