[package]
name = "little-env"
version = "0.1.0"
authors = ["Josh Hill <josh.hill189@gmail.com>"]
edition = "2018"
description = "An online environment for the LC-3"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2.64"
wasm-logger = "0.2"
yew = "0.17.0"
console_error_panic_hook = "0.1.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.41"
features = [
  'KeyboardEvent',
]

[dependencies.rust_lc3]
path = "lib/"
version = "0.1.0"
