[package]
name = "little-env"
version = "0.1.0"
authors = ["Josh Hill <josh.hill189@gmail.com>"]
edition = "2018"
description = "An online environment for the LC-3"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
serde = "^1"
serde_derive = "^1"
wasm-bindgen = "^0.2.0"
wasm-logger = "0.2"
yew = "0.18.0"
console_error_panic_hook = "0.1.6"
wee_alloc = "0.4.5"
lc3-rs = { git = "https://github.com/Pyxxil/rust-lc3-as.git" }

[dev-dependencies]
wasm-bindgen-test = "^0.3"

[dependencies.web-sys]
version = "^0.3"
features = [
  'Window',
  'KeyboardEvent',
  'HtmlAnchorElement',
]

[profile.release]
# less code to include in the binary
panic = 'abort'
# optimization over the entire codebase (better optimization, slower build)
codegen-units = 1
# optimization for size
opt-level = 's'
# link time optimization using using whole-program analysis
lto = "thin"
